--- a/res/styles.css
+++ b/res/styles.css
@@ -25,8 +25,10 @@ label.lbl_cnt:after {
 }
 
 .txt_dsc {
-    display: inline;
     font-size: 14px;
+    float: right;
+    margin: 0;
+    padding: 0;
 }
 
 .tooltip {
